# mtg-pytorch

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.gpu.yml  docker-compose.override.yml  docker-compose.yml  lookup.sh
data/: edhrec_top100.json
decklists/: sauron-the-dark-lord.txt
docs/: TODO.md  commander-decomposition.md  composition-first-plan.md  composition-next-steps.md  feedback-loop-design.md  synergies.md  training-notes.md  windows-non-docker-setup.md  xmage-signal.md
primers/: anim-pakal-thousandth-moon.analysis.md  anim-pakal-thousandth-moon.primer.json  atraxa-praetors-voice.analysis.md  atraxa-praetors-voice.primer.json  baylen-the-haymaker.analysis.md  baylen-the-haymaker.primer.json  caesar-legions-emperor.analysis.md  caesar-legions-emperor.primer.json  chatterfang-squirrel-general.analysis.md  chatterfang-squirrel-general.primer.json  elenda-the-dusk-rose.analysis.md  elenda-the-dusk-rose.primer.json  ezuri-claw-of-progress.analysis.md  ezuri-claw-of-progress.primer.json  ghave-guru-of-spores.analysis.md  ghave-guru-of-spores.primer.json  giada-font-of-hope.analysis.md  giada-font-of-hope.primer.json  hakbal-of-the-surging-soul.analysis.md  (+26 more)
shared/: pyproject.toml
shared/composition/: __init__.py  builder.py  card_facts.py  evaluation.py  goldfish.py  karsten.py  models.py  pool_helpers.py  profile.py  ranking.py
shared/mtg_sql/: __init__.py  commanders.py
shared/mtg_sql/staples/: __init__.py  draw_spell.py  interaction.py  land_ramp.py  mana_dorks.py  mana_rocks.py  protection.py  ramp.py  removal.py  sweeper.py  wincon.py
(+281 files in other folders)
