[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mtg-sql"
version = "0.1.0"
description = "Shared SQL fragments for MTG Commander AI services"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["mtg_sql*"]
